--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.436.0",
+    "mongodb": "^6.12.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
