--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "mongodb": "^6.12.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "resend": "^4.1.2",
     "swiper": "^11.1.11",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
