--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-email/components": "^0.0.34",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
+    "imap-simple": "^5.1.0",
     "lucide-react": "^0.436.0",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.13.1",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
@@ -29,13 +32,17 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "resend": "^4.1.2",
+    "sonner": "^2.0.2",
     "swiper": "^11.1.11",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "22.13.14",
+    "@types/react": "18.3.20",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.2"
   }
 }
